Fix the issues with homepage routing and overflow click event

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,13 +56,13 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding-inline: 5%;
 }
 
 .single-post {
   box-sizing: border-box;
   border: solid 2px black;
   padding: 1% 2%;
-  margin-inline: 5%;
   display: flex;
   flex-direction: column;
   color: black;
@@ -81,7 +81,6 @@ body {
   border: solid 2px black;
   border-radius: 4px;
   padding: 1% 2%;
-  margin-inline: 5%;
   margin-top: -1.5rem;
   display: flex;
   flex-direction: column;
@@ -91,7 +90,6 @@ body {
   box-sizing: border-box;
   border: solid 2px black;
   border-radius: 4px;
-  margin-inline: 5%;
   margin-top: 2rem;
   padding: 1% 2%;
 }
